# cuda-it

./: .clangd  .gitignore  11-scan.cu  7-convolution.cu  8-stencil.cu  9-histogram.cu  CMakeLists.txt  README.md
computeSanitizer/: CMakeLists.txt  output.md  racecheck.cu  writeValidMem.cu
convolution/: pmpp-convolution.cu
elementswise/: add.cu
features/: CMakeLists.txt  asyncEngineNum.cu  events.cu  records.cu
gemm/: CMakeLists.txt  kernels.cuh  kernels.h  matmuls.cu  mm-cublas.cuh  mm-naive.cuh  mm-v1.cuh  mm-v2.cuh
gemm/depreated/: matmul.cu
include/: compare.h  cx.h
otherTopics/: CMakeLists.txt  memoryorder.cu
reduce/: pmpp-reduce.cu
stencil/: CMakeLists.txt  pmpp-stencil.cu
utils/: envs.cuh  init.cuh  type.cuh  verify.cuh
